Unable to select cycles-specific passes in UV/image editor #44336

Closed
opened 2015-04-10 05:08:26 +02:00 by Jason Clarke · 10 comments

System Information
Mac OS X 10.10.2, AMD 5770

Blender Version
Broken: 52f5112
Worked: 2.74 official

Short description of error
The image editor is unable to switch to viewing a Cycles specific pass (such as environment, diffuse direct, glossy color, etc). Trying to switch just jumps you back to the combined pass. Passes that have an equivalent with the same name in BI seem to still work (such as depth, vector, etc)

Exact steps for others to reproduce the error

  1. Open attached .blend file and F12 to render it.
  2. In the UV editor, try to select a pass other than "combined". Blender won't let you.

passes_viewer.blend

**System Information** Mac OS X 10.10.2, AMD 5770 **Blender Version** Broken: 52f5112 Worked: 2.74 official **Short description of error** The image editor is unable to switch to viewing a Cycles specific pass (such as environment, diffuse direct, glossy color, etc). Trying to switch just jumps you back to the combined pass. Passes that have an equivalent with the same name in BI seem to still work (such as depth, vector, etc) **Exact steps for others to reproduce the error** 1. Open attached .blend file and F12 to render it. 2. In the UV editor, try to select a pass other than "combined". Blender won't let you. [passes_viewer.blend](https://archive.blender.org/developer/F160327/passes_viewer.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Jason Clarke 2015-04-10 05:08:26 +02:00
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed, and official 2.74 does not have that issue it seems…

Confirmed, and official 2.74 does not have that issue it seems…

Added subscriber: @Sergey

Added subscriber: @Sergey

For the records, the simplest fix is P217 but I'm not trying something else that doesn't require increasing all ImageUsers that many bytes.

For the records, the simplest fix is [P217](https://archive.blender.org/developer/P217.txt) but I'm not trying something else that doesn't require increasing all ImageUsers that many bytes.

Another approach is in D1232

Another approach is in [D1232](https://archive.blender.org/developer/D1232)

This issue was referenced by 479b669693

This issue was referenced by 479b6696932d133078690063508d8447d6dc0a28

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 479b669693.

Closed by commit 479b669693.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44336
No description provided.