source/blender/editors/render/render_internal.c
@@ -188,7 +188,7 @@ static void image_buffer_rect_update(RenderJob *rj, RenderResult *rr, ImBuf *ibu
 	 *                                              - sergey -
 	 */
 	/* TODO(sergey): Need to check has_combined here? */
-	if (iuser->pass == 0) {
+	if (iuser->passtype == SCE_PASS_COMBINED) {
 		size_t view_id = BKE_scene_multiview_view_id_get(&scene->r, viewname);
 		/* find current float rect for display, first case is after composite... still weak */
 		rectf = RE_RenderViewGetRectf(rr, view_id);
@@ -519,7 +519,6 @@ static void render_image_update_pass_and_layer(RenderJob *rj, RenderResult *rr, 
 			}
 		}
 
-		iuser->pass = sima->iuser.pass;
 		iuser->layer = sima->iuser.layer;
 
 		RE_ReleaseResult(rj->re);
